--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -9,28 +9,14 @@ dep.submodule.Numbers.Tenants.Tenants = 1
 dep.submodule.Numbers.Users.Organizations = 1
 
 ; --- models (name and parent class) ---
-;dep.model.\Numbers\Users\Users\Model\Role\Types = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Roles = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Role\Children = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Role\Manages = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Role\Organizations = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Role\Permissions = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Role\Notifications = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Types = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Titles = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Users = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Organizations = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Roles = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Groups = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\User\Group\Map = "\Object\Table"
-;dep.model.\Numbers\Users\Users\Model\Registration\Tenants = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Language\Codes = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Locales = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Timezones = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Groups = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Group\Organizations = "\Object\Table"
 
-;dep.model.\Numbers\Users\Users\Data\Import = "\Object\Import"
-;dep.model.\Numbers\Users\Users\Data\System = "\Object\Import"
-;dep.override.\Numbers\Users\Users\Override\ACL\Resources = "\Object\ACL\Resources"
-;
-;dep.acl.\Numbers\Users\Users\ACL\Role\RoleBelongsTo = 1
-;dep.acl.\Numbers\Users\Users\ACL\User\UserBelongsTo = 1
+dep.model.\Numbers\Internalization\Internalization\Data\Import = "\Object\Import"
+dep.model.\Numbers\Internalization\Internalization\Data\System = "\Object\Import"
 
 [help]
 ; I/N Internalization
