--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -14,6 +14,9 @@ dep.model.\Numbers\Internalization\Internalization\Model\Locales = "\Object\Tabl
 dep.model.\Numbers\Internalization\Internalization\Model\Timezones = "\Object\Table"
 dep.model.\Numbers\Internalization\Internalization\Model\Groups = "\Object\Table"
 dep.model.\Numbers\Internalization\Internalization\Model\Group\Organizations = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Translations = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Translation\Organizations = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Translation\Missing = "\Object\Table"
 
 dep.model.\Numbers\Internalization\Internalization\Data\Import = "\Object\Import"
 dep.model.\Numbers\Internalization\Internalization\Data\System = "\Object\Import"
