form titles/module code

--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -20,5 +20,20 @@ dep.model.\Numbers\Internalization\Internalization\Model\Translation\Missing = "
 dep.model.\Numbers\Internalization\Internalization\Data\Import = "\Object\Import"
 dep.model.\Numbers\Internalization\Internalization\Data\System = "\Object\Import"
 
+; forms
+dep.form.\Numbers\Internalization\Internalization\Form\Language\Codes = "Form"
+dep.form.\Numbers\Internalization\Internalization\Form\Groups = "Form"
+dep.form.\Numbers\Internalization\Internalization\Form\Locales = "Form"
+dep.form.\Numbers\Internalization\Internalization\Form\Missing = "Form"
+dep.form.\Numbers\Internalization\Internalization\Form\Timezones = "Form"
+dep.form.\Numbers\Internalization\Internalization\Form\Translations = "Form"
+; lists
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Language\Codes = "List"
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Groups = "List"
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Locales = "List"
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Missing = "List"
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Timezones = "List"
+dep.form.\Numbers\Internalization\Internalization\Form\List2\Translations = "List"
+
 [help]
 ; I/N Internalization
