Change Log --- Change Log:	Other \#1020 \(Updated change log.\)

--- a/module.ini
+++ b/module.ini
@@ -1,3 +1,9 @@
 [module]
-module.name = "Numbers/Internalization"
-module.version = ""
+module.name = "Numbers\Internalization"
+module.title = "Internalization Repository"
+module.version = "2.0.1"
+module.repository = 1
+
+[help]
+; Contains:
+;	I/N Internalization
