--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -1,6 +1,7 @@
 [module]
 module.name = "Numbers/Internalization/Internalization"
-module.version = ""
+module.title = "I/N Internalization"
+module.version = "1.0.1"
 
 [dependencies]
 dep.submodule.Numbers.Backend.Db.__any = 1
