--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -1,13 +1,15 @@
 [module]
 module.name = "Numbers/Internalization/Internalization"
 module.title = "I/N Internalization"
-module.version = "1.0.1"
+module.version = "1.0.2"
 
 [dependencies]
 dep.submodule.Numbers.Backend.Db.__any = 1
 dep.submodule.Numbers.Backend.System.Modules = 1
 dep.submodule.Numbers.Tenants.Tenants = 1
 dep.submodule.Numbers.Users.Organizations = 1
+dep.submodule.Numbers.Countries.Countries = 1
+dep.submodule.Numbers.Countries.Currencies = 1
 
 ; --- models (name and parent class) ---
 dep.model.\Numbers\Internalization\Internalization\Model\Language\Codes = "\Object\Table"
