Use cases from another application

--- a/Internalization/module.ini
+++ b/Internalization/module.ini
@@ -1,5 +1,6 @@
 [module]
 module.name = "Numbers/Internalization/Internalization"
+module.code = "IN"
 module.title = "I/N Internalization"
 module.version = "1.0.10"
 
@@ -19,9 +20,12 @@ dep.model.\Numbers\Internalization\Internalization\Model\Groups = "\Object\Table
 dep.model.\Numbers\Internalization\Internalization\Model\Translations = "\Object\Table"
 dep.model.\Numbers\Internalization\Internalization\Model\Translation\Organizations = "\Object\Table"
 dep.model.\Numbers\Internalization\Internalization\Model\Translation\Missing = "\Object\Table"
+dep.model.\Numbers\Internalization\Internalization\Model\Localizations = "\Object\Table"
 
 dep.model.\Numbers\Internalization\Internalization\Data\Import = "\Object\Import"
 dep.model.\Numbers\Internalization\Internalization\Data\System = "\Object\Import"
+; default settings are activated using this import
+;dep.model.\Numbers\Internalization\Internalization\Data\Activation\Internalization = "\Object\Import"
 
 ; forms
 dep.form.\Numbers\Internalization\Internalization\Form\Language\Codes = "Form"
@@ -37,6 +41,8 @@ dep.form.\Numbers\Internalization\Internalization\Form\List2\Locales = "List"
 dep.form.\Numbers\Internalization\Internalization\Form\List2\Missing = "List"
 dep.form.\Numbers\Internalization\Internalization\Form\List2\Timezones = "List"
 dep.form.\Numbers\Internalization\Internalization\Form\List2\Translations = "List"
+
+dep.preset.\Numbers\Internalization\Internalization\Model\Groups = "OptionsActive"
 
 [help]
 ; I/N Internalization
